added the submodule of memory research

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
-[submodule "applications/memory_research_ornl"]
-	path = applications/memory_research_ornl
+[submodule "memory_research_ornl"]
+	path = memory_research_ornl
+	url = https://github.com/monil01/memory_research_ornl.git
+[submodule "applications/memory_research"]
+	path = applications/memory_research
 	url = https://github.com/monil01/memory_research_ornl.git
